Save Commit: Passed the new PhiRemover, there is still problems in ASMBuilder